@@ -20,6 +20,12 @@ New in CSSC-1.3.1-git, YYYY-MM-DD
           which better matches OpenSolaris 2009.06.  The indentation
           of the delta summary has also been adjusted.
 
+	* To pass an empty list of MRs to admin, you now have to
+          provide an argument (as opposed to omitting it).  For
+          example, "admin -i/dev/null -fv -m' ' s.foo".  This aligns
+          better with OpenSolaris 2009.06 but it is a
+          backward-incompatible change.
+
 New in CSSC-1.3.0, 2010-11-07
 
         * This release is identical to CSSC-1.3.0rc1 apart from the
